2006-10-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* configure.in (CXXFLAGS): add -Werror.

	* VERSION (PACKAGE_NAME): release 2.9.25

2006-10-18  Joe Neeman  <joeneeman@gmail.com>

	* lily/simple-spacer.cc (get_line_forces): test for non-fitting
	line even if we precede a forced break.

	* lily/optimal-page-breaking.cc (try_page_spacing): square line
	forces too. Make page-spacing weight default to 10 because the
	changes to vertical springs decreased the page force/line force
	proportions. Also, take the average of line force and page force
	instead of just the sum.

	* lily/constrained-breaking.cc (initialize): make the stiffness
	of the vertical springs depend on the height of the system. This
	prevents pages with only a few large systems from getting huge
	forces

	* Documentation/user/page.itely (Page formatting): document the
	change in default page-spacing-weight

	* lily/include/constrained-breaking.hh: initialise bottom_padding_

2006-10-18  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* input/typography-demo.ly (melody): remove superfluous slur.

	* scm/define-grob-interfaces.scm (piano-pedal-script-interface):
	add piano-pedal-script-interface

2006-10-18  Bertalan Fodor  <lilypondtool@organum.hu>

	* scripts/lilypond-book.py: DocBook support.

2006-10-18  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/piano-pedal-engraver.cc (struct Pedal_info): remove
	Y-alignment code.
	(stop_translation_timestep): set bound to currentMusicalColumn if
	not set yet. Fixes #102

	* lily/piano-pedal-bracket.cc: formatting.

	* input/test/engraver-one-by-one.ly (MyStaff): reformat.

	* lily/piano-pedal-align-engraver.cc: new class
	Piano_pedal_align_engraver. Handle side-positioning Y-alignment
	for piano pedals.  

2006-10-18  Heikki Junes  <hjunes@gmail.com>

	* po/fi.po: Update Finnish translation (before the next release).

2006-10-17  Joe Neeman  <joeneeman@gmail.com>

	* lily/system.cc (get_paper_system): reinstate the backwards-