@@ -1,5 +1,7 @@
 2006-10-19  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* flower/string-convert.cc (dec2double): clean-up warnings. 
+
 	* configure.in (CXXFLAGS): add -Werror.
 
 	* VERSION (PACKAGE_NAME): release 2.9.25
